--- a/css/main.css
+++ b/css/main.css
@@ -7,5 +7,14 @@
 body {
 	font-family: 'Montserrat', sans-serif;
 	background-color: #333;
-	color: #fff;
 } /*# sourceMappingURL=main.css.map */
+
+nav {
+	text-transform: uppercase;
+	.nav-link,
+	.navbar-nav .nav-link.active,
+	.navbar-nav .nav-link.show,
+	.navbar-brand {
+		color: #fff;
+	}
+}
