Created header, colored word gamers

--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,10 @@ body {
   background-color: #333;
 }
 
+.blue-text {
+  color: #039dff;
+}
+
 nav {
   text-transform: uppercase;
 }
@@ -28,4 +32,34 @@ nav .nav-link:hover,
 nav .navbar-nav .nav-link.active,
 nav .navbar-nav .nav-link.show {
   color: #039dff;
+}
+
+header.hero-img {
+  position: relative;
+  height: 100vh;
+  background-image: url("../img/playstation-small.jpg");
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  color: #fff;
+  z-index: 0;
+}
+header.hero-img h1 {
+  text-transform: uppercase;
+}
+header.hero-img .hero-shadow {
+  position: absolute;
+  top: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: -5;
+}
+header.hero-img .hero-text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 100%;
 }/*# sourceMappingURL=main.css.map */
