--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,10 @@ body {
 	background-color: #333;
 }
 
+.blue-text {
+	color: $main-color;
+}
+
 nav {
 	.navbar-toggler {
 		padding: 10px 15px;
@@ -32,5 +36,38 @@ nav {
 	.navbar-nav .nav-link.active,
 	.navbar-nav .nav-link.show {
 		color: $main-color;
+	}
+}
+
+header.hero-img {
+	position: relative;
+	height: 100vh;
+	background-image: url('../img/playstation-small.jpg');
+	background-size: cover;
+	background-position: center;
+	background-attachment: fixed;
+	color: $white;
+	z-index: 0;
+
+	h1 {
+		text-transform: uppercase;
+	}
+
+	.hero-shadow {
+		position: absolute;
+		top: 0;
+		padding: 0;
+		width: 100%;
+		height: 100%;
+		background-color: rgb(0, 0, 0, 0.8);
+		z-index: -5;
+	}
+
+	.hero-text {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-direction: column;
+		height: 100%;
 	}
 }
