Fixed nav and header layering

--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,8 @@ body {
 
 nav {
   text-transform: uppercase;
+  z-index: 5;
+  text-transform: uppercase;
 }
 nav .navbar-toggler {
   padding: 10px 15px;
