Menu scrolling anchor, optimized background image

--- a/css/main.css
+++ b/css/main.css
@@ -64,4 +64,10 @@ header.hero-img .hero-text {
   align-items: center;
   flex-direction: column;
   height: 100%;
+}
+
+@media (min-width: 1200px) {
+  header.hero-img {
+    background-image: url("../img/playstation-big.jpg");
+  }
 }/*# sourceMappingURL=main.css.map */
