--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,7 +17,7 @@ body {
 nav {
 	text-transform: uppercase;
 	z-index: 5;
-    
+
 	.navbar-toggler {
 		padding: 10px 15px;
 	}
@@ -72,5 +72,11 @@ header.hero-img {
 		align-items: center;
 		flex-direction: column;
 		height: 100%;
+	}
+}
+
+@media (min-width: 1200px) {
+	header.hero-img {
+		background-image: url('../img/playstation-big.jpg');
 	}
 }
