--- a/sass/main.scss
+++ b/sass/main.scss
@@ -73,6 +73,15 @@ header.hero-img {
 		flex-direction: column;
 		height: 100%;
 	}
+
+	.fa-chevron-down {
+		position: absolute;
+		bottom: 20px;
+		font-size: 30px;
+		color: $white;
+		transition: translate(-50%);
+		left: 50%;
+	}
 }
 
 @media (min-width: 1200px) {
