--- a/sass/main.scss
+++ b/sass/main.scss
@@ -84,6 +84,18 @@ header.hero-img {
 	}
 }
 
+@media (min-width: 768px) {
+	.hero-text {
+		h1 {
+			font-size: 42px;
+		}
+
+		p {
+			font-size: 20px;
+		}
+	}
+}
+
 @media (min-width: 1200px) {
 	header.hero-img {
 		background-image: url('../img/playstation-big.jpg');
