--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,9 +14,14 @@ body {
 	color: $main-color;
 }
 
+.shadow-bg {
+	background-color: rgba(0, 0, 0, 0.8);
+}
+
 nav {
 	text-transform: uppercase;
 	z-index: 5;
+	transition: 0.6s;
 
 	.navbar-toggler {
 		padding: 10px 15px;
