New section about us, tiny translation

--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,18 @@ body {
   background-color: rgba(0, 0, 0, 0.8);
 }
 
+.section-title {
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.underline {
+  height: 4px;
+  background-color: #039dff;
+  max-width: 100px;
+  margin: 0 auto 40px;
+}
+
 nav {
   text-transform: uppercase;
   z-index: 5;
@@ -77,6 +89,18 @@ header.hero-img .fa-chevron-down {
   color: #fff;
   transition: translate(-50%);
   left: 50%;
+}
+
+.aboutus i {
+  margin-top: 20px;
+  font-size: 30px;
+}
+.aboutus .aboutus-card-title {
+  font-size: 18px;
+  text-transform: uppercase;
+}
+.aboutus .aboutus-card-text {
+  font-size: 14px;
 }
 
 @media (min-width: 768px) {
