--- a/css/main.css
+++ b/css/main.css
@@ -31,7 +31,7 @@ body {
 nav {
   text-transform: uppercase;
   z-index: 5;
-  transition: 0.6s;
+  transition: background-color 0.6s;
   text-transform: uppercase;
 }
 nav .navbar-toggler {
@@ -101,6 +101,12 @@ header.hero-img .fa-chevron-down {
 }
 .aboutus .aboutus-card-text {
   font-size: 14px;
+}
+.aboutus .aboutus-hover {
+  transition: color 0.3s;
+}
+.aboutus .aboutus-hover:hover {
+  color: #039dff;
 }
 
 @media (min-width: 768px) {
