--- a/sass/main.scss
+++ b/sass/main.scss
@@ -33,7 +33,7 @@ body {
 nav {
 	text-transform: uppercase;
 	z-index: 5;
-	transition: 0.6s;
+	transition: background-color 0.6s;
 
 	.navbar-toggler {
 		padding: 10px 15px;
@@ -114,6 +114,14 @@ header.hero-img {
 
 	.aboutus-card-text {
 		font-size: 14px;
+	}
+
+	.aboutus-hover {
+		transition: color 0.3s;
+	}
+
+	.aboutus-hover:hover {
+		color: $main-color;
 	}
 }
 
