--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,10 @@ body {
 	background-color: #333;
 }
 
+html {
+	scroll-padding-top: 74px;
+}
+
 .blue-text {
 	color: $main-color;
 }
@@ -134,6 +138,12 @@ header.hero-img {
 		p {
 			font-size: 20px;
 		}
+	}
+}
+
+@media (min-width: 992px) {
+	html {
+		scroll-padding-top: 72px;
 	}
 }
 
