--- a/css/main.css
+++ b/css/main.css
@@ -113,6 +113,24 @@ header.hero-img .fa-chevron-down {
   color: #039dff;
 }
 
+.aboutus-hero {
+  position: relative;
+  background-image: url("../img/technology-small.jpg");
+  background-size: cover;
+  background-position: center;
+  color: #ddd;
+  z-index: 0;
+}
+.aboutus-hero .aboutus-shadow {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: -5;
+}
+
 @media (min-width: 768px) {
   .hero-text h1 {
     font-size: 42px;
