--- a/sass/main.scss
+++ b/sass/main.scss
@@ -129,6 +129,25 @@ header.hero-img {
 	}
 }
 
+.aboutus-hero {
+	position: relative;
+	background-image: url('../img/technology-small.jpg');
+	background-size: cover;
+	background-position: center;
+	color: $light-gray;
+	z-index: 0;
+
+	.aboutus-shadow {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background-color: rgba(0, 0, 0, 0.5);
+		z-index: -5;
+	}
+}
+
 @media (min-width: 768px) {
 	.hero-text {
 		h1 {
