--- a/sass/main.scss
+++ b/sass/main.scss
@@ -160,6 +160,23 @@ header.hero-img {
 	}
 }
 
+.portfolio {
+	.carousel-item {
+		height: 600px;
+	}
+
+	.carousel-caption {
+		left: 0;
+		right: 0;
+		padding: 40px 0;
+		background-color: rgb(0, 0, 0, 0.8);
+	}
+
+	.carousel-indicators {
+		padding-bottom: 20px;
+	}
+}
+
 @media (min-width: 768px) {
 	.hero-text {
 		h1 {
