--- a/css/main.css
+++ b/css/main.css
@@ -194,6 +194,45 @@ header.hero-img .fa-chevron-down {
   font-size: 20px;
 }
 
+.team {
+  position: relative;
+  background-image: url("../img/team/background.jpeg");
+  background-size: cover;
+  background-attachment: fixed;
+  z-index: 0;
+}
+.team .section-title {
+  color: #ddd;
+}
+.team .team-shadow {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: -5;
+}
+.team .card {
+  transition: scale 0.3s;
+}
+.team .card img {
+  height: 300px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.team .card i {
+  padding: 10px;
+}
+.team .card:hover {
+  scale: 0.96;
+}
+.team .card-title {
+  margin-bottom: 20px;
+  text-align: center;
+  text-transform: uppercase;
+}
+
 @media (min-width: 768px) {
   .hero-text h1 {
     font-size: 42px;
