Configuring and styling Slick carousel

--- a/css/main.css
+++ b/css/main.css
@@ -224,6 +224,9 @@ header.hero-img .fa-chevron-down {
 .team .card i {
   padding: 10px;
 }
+.team .card .card-body {
+  height: 160px;
+}
 .team .card:hover {
   scale: 0.96;
 }
