--- a/css/main.css
+++ b/css/main.css
@@ -253,6 +253,54 @@ header.hero-img .fa-chevron-down {
   text-transform: uppercase;
 }
 
+.contact {
+  position: relative;
+  background-image: url("../img/skyline.jpg");
+  background-position: bottom;
+  background-attachment: fixed;
+  background-size: cover;
+  z-index: 0;
+}
+.contact .section-title {
+  color: #ddd;
+}
+.contact .underline {
+  background-color: #ddd;
+}
+.contact .contact-shadow {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 9, 27, 0.85);
+  z-index: -5;
+}
+.contact .contact-us {
+  display: flex;
+  align-items: center;
+  color: #fff;
+}
+.contact .contact-us .contact-item {
+  margin: 30px 0;
+}
+.contact .contact-us .contact-item h3 {
+  margin-bottom: 15px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+.contact .contact-us .social-media {
+  font-size: 26px;
+}
+.contact .contact-us .social-media a {
+  padding: 10px;
+  color: #fff;
+  transition: color 0.3s;
+}
+.contact .contact-us .social-media a:hover {
+  color: #039dff;
+}
+
 @media (min-width: 768px) {
   .hero-text h1 {
     font-size: 42px;
