--- a/sass/main.scss
+++ b/sass/main.scss
@@ -298,6 +298,63 @@ header.hero-img {
 	}
 }
 
+.contact {
+	position: relative;
+	background-image: url('../img/skyline.jpg');
+	background-position: bottom;
+	background-attachment: fixed;
+	background-size: cover;
+	z-index: 0;
+
+	.section-title {
+		color: $light-gray;
+	}
+
+	.underline {
+		background-color: $light-gray;
+	}
+
+	.contact-shadow {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background-color: rgb(0, 9, 27, 0.85);
+		z-index: -5;
+	}
+
+	.contact-us {
+		display: flex;
+		align-items: center;
+		color: $white;
+
+		.contact-item {
+			margin: 30px 0;
+
+			h3 {
+				margin-bottom: 15px;
+				text-transform: uppercase;
+				letter-spacing: 2px;
+			}
+		}
+
+		.social-media {
+			font-size: 26px;
+
+			a {
+				padding: 10px;
+				color: $white;
+				transition: color 0.3s;
+			}
+
+			a:hover {
+				color: $main-color;
+			}
+		}
+	}
+}
+
 @media (min-width: 768px) {
 	.hero-text {
 		h1 {
